fixed overflow issue, and a new feature

--- a/todo/src/style.css
+++ b/todo/src/style.css
@@ -6,7 +6,9 @@ body {
   background-color: black;
   font-family: "Josefin Sans", sans-serif;
 }
-
+::-webkit-scrollbar {
+  width: 0;
+}
 .container-light {
   background: url("./images/bg-desktop-light.jpg") no-repeat;
   background-color: white;
@@ -20,7 +22,7 @@ body {
 .container {
   background-size: 100% 35%;
   width: 100%;
-  height: 100vh;
+  height: 150vh;
   margin: 0 auto;
 }
 
@@ -52,11 +54,12 @@ body {
 }
 .item-2 input {
   width: 95%;
-  height: 90%;
+  height: 60%;
   border-radius: 5px;
   border: none;
   color: hsl(236, 9%, 61%);
   padding-left: 20px;
+  margin-top: 12px;
 }
 .lists {
   display: flex;
